<resources>
    <string name="app_name">Piggie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Piggies!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_mongo">Mongo</string>
    <string name="menu_sequel">Sequel</string>
    <string name="menu_report">Report</string>

    <string name="submit">Submit</string>
    <string name="date_hint">Click DATE to change</string>
</resources>
