<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFAF8"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/sign" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="Gui Gui"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:paddingHorizontal="30sp">

        <Button
            android:id="@+id/home_mongo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:text="@string/menu_mongo"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/home_sequel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:text="@string/menu_sequel"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/home_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20sp"
        android:text="Report"
        android:textAllCaps="false" />
</LinearLayout>